// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > snapshots > matches snapshot for default variant 1`] = `
<span
  class="inline-flex shrink-0 h-4 w-4 text-foreground"
  role="img"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check inline-flex shrink-0 h-4 w-4 text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
</span>
`;

exports[`Icon > snapshots > matches snapshot for large size 1`] = `
<span
  class="inline-flex shrink-0 h-5 w-5 text-foreground"
  role="img"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check inline-flex shrink-0 h-5 w-5 text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
</span>
`;

exports[`Icon > snapshots > matches snapshot for primary variant 1`] = `
<span
  class="inline-flex shrink-0 h-4 w-4 text-primary"
  role="img"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info inline-flex shrink-0 h-4 w-4 text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
</span>
`;
